VHCS 2.4.7 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2005-12-11 Erik Lehmann

	- GUI:
		* Updated: gui/tools/pma to phpMyAdmin-2.7.0-pl1

2005-12-10 Erik Lehmann

	- INSTALLATION:
		* Fixed bug: typo error in HOWTO-Update

2005-12-09 Carsten Schoene

	- INSTALLATION:
		* Added: SuSE configuration files

2005-12-08 Erik Lehmann

	- MISC:
		* Added: New docs folder in package
	- GUI:
		* Deleted: some unneeded files from webmail and filemanager
	- ENGINE:
		* Fixed bug #0000256: typo error at DATABASE_NAME in vhcs2.conf 

2005-12-07 Erik Lehmann

	- GUI
		* Fixed bug #0000255: hardcoded page titles in some admin gui templates and one client template

2005-12-06 Erik Lehmann

	- INSTALLATION:
		* Fixed bug #0000248: "set permission script not found" in vhcs2-setup during execute from /tmp
	- GUI
		* Fixed bug #0000253: Wrong set page titels in some admin templates
		* Fixed bug #0000252: Message typo errors in reseller and admin lostpw_email_setup.php
	- MISC
		* Fixed bug #0000251: Typo errors in filename

2005-12-04 Erik Lehmann

	- RELEASE
		* vhcs2.4.7-beta1

2005-12-03 Erik Lehmann

	- GUI
		* Fixed bug #0000247: Cross-Site-Scripting bug in gui/errordocs/index.php

2005-12-02 Erik Lehmann

	- GUI
		* Fixed bug #0000244: Useless code in /client/email-account.tpl

2005-12-01 Freres Frederic

	- GUI
		* Fixed: CatchAll Hijacking

2005-12-01  Erik Lehmann

	- ENGINE:
		* Fixed bug #0000243: Name "main::cfg" used only once: possible typo at /var/www/vhcs2/engine/vhcs2-db-passwd line 145.

2005-11-30  Erik Lehmann

	- GUI:
		* Added: Catchall now works for forward acc, and for external mail accounts

2005-11-28  Erik Lehmann

	- INSTALLATION:
		* Fixed bug #0000241: change chown sytax for gui in vhcs2-setup

2005-11-27  Erik Lehmann

	- ENGINE:
		* Added: corrected wrong homedir setting per systemuser (only for new added user), thanks to Markus Petzsch
		* Added: restart amavis service if new mail user is added / if you are using amavis, thanks to Markus Petzsch