@@ -49,7 +49,7 @@
 ####
 
 
-require '/var/www/vhcs2/engine/vhcs2_common_code.pl';
+require '../vhcs2_common_code.pl';
 
 
 %main::ftp_traffic = ();
